compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.kt
// RUN_PIPELINE_TILL: SOURCE
val foo = <!INVISIBLE_MEMBER!>UInt<!><!NO_VALUE_FOR_PARAMETER!>()<!>
